--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 		    <version>2.3.0</version>
 		</dependency>
 		
+		 <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.9.0</version>
+		  </dependency>
+		
 	</dependencies>
 
 	<build>
